--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -122,7 +122,7 @@
             </div>
         </div>
     </main>
-    <footer class="footerFlexText footerFlexTextStyle">
+    <footer class="footerFlexText footerFlexTextStyle footerFlex" >
         
         <div><p>Сайт разработан ФИ, Copyright © 2021 </p></div>
     </footer>
