--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -8,9 +8,9 @@
    
 </head>
 <body>
-    <nav class="navFlex navBg">
-        <div class="">
-            <a class="linksStyle" href="index.html"><img src="../images/logo.png" width="200px" height="200px"></a>
+    <nav class="navFlex navBg mainFlexColumns">
+        <div class="logoItemsFlex">
+            <a class="linksStyle" href="index.html"><img src="../images/logo.png" ></a>
         </div>
         <ul>
     
