--- a/site/pages/rezume.html
+++ b/site/pages/rezume.html
@@ -48,9 +48,9 @@
                     <td >должностные обязанности</td>
                 </tr>
                 <tr >
-                    <td class="tdFlexText">2020-2024</td>
-                    <td class="tdFlexText">"Университет Дубна", Прикладная информатика</td>
-                    <td>
+                    <td data-label="год"  class="tdFlexText">2020-2024</td>
+                    <td data-label="место работы" class="tdFlexText">"Университет Дубна", Прикладная информатика</td>
+                    <td data-label="должностные обязанности">
                         <ul>
                             <li>
                                 студент, учеба
@@ -59,9 +59,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdFlexText">2024-2028</td>
-                    <td class="tdFlexText">ПАО "Газпром", Web-дизайнер</td>
-                    <td >
+                    <td data-label="год" class="tdFlexText">2024-2028</td>
+                    <td data-label="место работы" class="tdFlexText">ПАО "Газпром", Web-дизайнер</td>
+                    <td data-label="должностные обязанности">
                         <ul>
                             <p>Поддержка и развитие интерфейса продукта:</p>
                             <li>проектирование и оформление интерфейсов, их анимация</li>
@@ -71,9 +71,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="tdFlexText">2024 по настоящее время</td>
-                    <td class="tdFlexText">Google, Lead UX/UI Designer</td>
-                    <td>
+                    <td data-label="год" class="tdFlexText">2024 по настоящее время</td>
+                    <td data-label="место работы" class="tdFlexText">Google, Lead UX/UI Designer</td>
+                    <td data-label="должностные обязанности">
                         <ul>
                             <li>создавать прототипы и проектировать игровые меню и интерфейсы;</li>
                             <li>создавать пользовательские сценарии и макеты интерфейсов;</li>
