--- a/site/pages/main.html
+++ b/site/pages/main.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navFlex navBg">
         <div class="logoItemsFlex">
-            <a class="linksStyle" href="index.html"><img src="../images/logo.png" width="200px" height="200px"></a>
+            <a class="linksStyle" href="../index.html"><img src="../images/logo.png" width="200px" height="200px"></a>
         </div>
         <ul>
     
@@ -55,14 +55,17 @@
 
 
     </main>
-    <footer class="footerFlex footerBorder footerBg">
-        <div>
-            <a href="https://vk.com/"><img class="imgSizeSmall" src="../images/logoVK.png" alt="" ></a>
-            <a href="https://www.instagram.com/?hl=ru"><img class="imgSizeSmall" src="../images/logoInst.png" alt="" ></a>
-            <a href="https://github.com/"><img class="imgSizeSmall" src="../images/logoGit.jpg" alt="" ></a>
-        </div>
-        <div><p ></p>Сайт разработан ФИ, Copyright © 2021 </p></div>
-    </footer>
+
+        <footer class="footerFlex footerBorder footerBg">
+            <div>
+                <a href="https://vk.com/"><img class="imgSizeSmall" src="../images/logoVK.png" alt="" ></a>
+                <a href="https://www.instagram.com/?hl=ru"><img class="imgSizeSmall" src="../images/logoInst.png" alt="" ></a>
+                <a href="https://github.com/"><img class="imgSizeSmall" src="../images/logoGit.jpg" alt="" ></a>
+            </div>
+            <div ><p ></p>Сайт разработан ФИ, Copyright © 2021 </p></div>
+        </footer>
+
+    
 
 </body>
 </html>
