--- a/site/pages/rezume.html
+++ b/site/pages/rezume.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navFlex navBg">
         <div class="logoItemsFlex">
-            <a class="linksStyle" href="index.html"><img src="../images/logo.png" width="200px" height="200px"></a>
+            <a class="linksStyle" href="../index.html"><img src="../images/logo.png" width="200px" height="200px"></a>
         </div>
         <ul>
     
@@ -96,7 +96,7 @@
             <a href="https://www.instagram.com/?hl=ru"><img class="imgSizeSmall" src="../images/logoInst.png" ></a>
             <a href="https://github.com/"><img class="imgSizeSmall" src="../images/logoGit.jpg" alt="" ></a>
         </div>
-        <div><p style="text-align: center;">Сайт разработан ФИ, Copyright © 2021 </p></div>
+        <div ><p>Сайт разработан ФИ, Copyright © 2021 </p></div>
     </footer>
 
 </body>
