--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -124,6 +124,7 @@
             </div>
         </div>
     </main>
+    <div></div>
     <footer class="footerFlex  footerFlexTextStyle" >
         <div></div>
         <div ><p>Сайт разработан ФИ, Copyright © 2021 </p></div>
