--- a/site/pages/rezume.html
+++ b/site/pages/rezume.html
@@ -40,17 +40,20 @@
     <main class="mainFlex mainBg mainFlexText">
         <div>
             <h2 style="text-align: center;">Опыт работы</h2>
-            <table>
+            <table class="table">
                 
-                <tr class="trBg trFlexCaption">
+                <thead>
+					<tr class="trBg trFlexCaption">
                     <td >год</td>
                     <td >место работы(учебы),должность</td>
                     <td >должностные обязанности</td>
                 </tr>
-                <tr >
-                    <td data-label="год"  class="tdFlexText">2020-2024</td>
-                    <td data-label="место работы" class="tdFlexText">"Университет Дубна", Прикладная информатика</td>
-                    <td data-label="должностные обязанности">
+				</thead>
+                <tbody>
+					<tr >
+                    <td <span>год</span>  2020-2024</td>
+                    <td <span>место работы</span> "Университет Дубна", Прикладная информатика</td>
+                    <td <span>должностные обязанности</span>>
                         <ul>
                             <li>
                                 студент, учеба
@@ -59,9 +62,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td data-label="год" class="tdFlexText">2024-2028</td>
-                    <td data-label="место работы" class="tdFlexText">ПАО "Газпром", Web-дизайнер</td>
-                    <td data-label="должностные обязанности">
+                    <td <span>год</span> 2024-2028</td>
+                    <td <span>место работы</span> ПАО "Газпром", Web-дизайнер</td>
+                    <td <span>должностные обязанности </span>
                         <ul>
                             <p>Поддержка и развитие интерфейса продукта:</p>
                             <li>проектирование и оформление интерфейсов, их анимация</li>
@@ -71,9 +74,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td data-label="год" class="tdFlexText">2024 по настоящее время</td>
-                    <td data-label="место работы" class="tdFlexText">Google, Lead UX/UI Designer</td>
-                    <td data-label="должностные обязанности">
+                    <td <span> год </span>  2024 по настоящее время</td>
+                    <td <span>место работы</span> Google, Lead UX/UI Designer</td>
+                    <td <span>должностные обязанности </span> 
                         <ul>
                             <li>создавать прототипы и проектировать игровые меню и интерфейсы;</li>
                             <li>создавать пользовательские сценарии и макеты интерфейсов;</li>
@@ -87,6 +90,7 @@
                         </ul>
                     </td>
                 </tr>
+				</tbody>
             </table>
         </div>
     </main>
