--- a/site/pages/rezume.html
+++ b/site/pages/rezume.html
@@ -53,7 +53,7 @@
 					<tr >
                     <td <span>год</span>  2020-2024</td>
                     <td <span>место работы</span> "Университет Дубна", Прикладная информатика</td>
-                    <td <span>должностные обязанности</span>>
+                    <td <span>должностные обязанности</span>
                         <ul>
                             <li>
                                 студент, учеба
